# bashit

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
Formula/: bashit.rb
docs/: demo.tape
shell/: bashit.zsh
src/: main.rs
