[package]
name = "bashit"
version = "0.1.0"
edition = "2024"
description = "Translate natural language into a shell command and replace the line in place"
repository = "https://github.com/dnivra26/bashit"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
